<resources>
    <string name="app_name">Days Go By</string>
    <string name="entry_title_hint">Enter a title for the day.</string>
    <string name="entry_good_hint">Type something good that happened.</string>

    <string name="entry_photo_label">PHOTO OF THE DAY</string>
    <string name="entry_video_label">SONG OF THE DAY</string>

    <string name="entry_title_label">Title</string>
    <string name="entry_greeting">HELLO!\nHOW DID YOUR DAY GO?</string>
    <string name="entry_mood_label">HOW DID YOUR DAY GO?</string>
    <string name="entry_good_label">WHAT WENT WELL TODAY?</string>
    <string name="entry_solved_label">Save image</string>
    <string name="new_entry">New Entry</string>
    <string name="entry_suspect_text">  SELECT SONG  </string>
    <string name="entry_report_text">  SHARE WITH FRIENDS!  </string>
    <string name="entry_title">Entry Title</string>
    <string name="entry_date">Entry Date</string>
    <string name="entry_good1">Good 1</string>
    <string name="entry_good2">Good 2</string>
    <string name="entry_good3">Good 3</string>
    <string name="notification_channel_name">Days Go By</string>
    <string name="new_pictures_title">It\'s a new day!</string>
    <string name="new_pictures_text">Make a new entry in your journal!</string>



    <string name="entry_report">%1$s!\n
On %2$s, I felt %3$s. Some good things that happened are: %4$s. %5$s
</string>
    <string name="entry_report_solved"></string>
    <string name="entry_report_unsolved"></string>
    <string name="entry_report_no_suspect">I did not find any new songs this day.</string>
    <string name="entry_report_suspect">check out this cool song I found %s!</string>
    <string name="entry_report_subject">My Journal Entry!</string>
    <string name="send_report">Send entry report via</string>
</resources>