<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:layout_margin="1dp">

    <Button
        android:id="@+id/entry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:textColor="@color/cream"
        tools:text="Wed Nov 14 11:56 EST 2018" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="casual"
                android:gravity="center_horizontal"
                android:text="@string/entry_greeting"
                android:textColor="@color/brown"
                android:typeface="normal" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:progressTint="@color/latte"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="casual"
                android:gravity="center_horizontal"
                android:text="@string/entry_photo_label"
                android:textColor="@color/brown" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/entry_photo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:background="@android:color/darker_gray"
                    android:cropToPadding="true"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/entry_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@android:drawable/ic_menu_camera"/>
                    <ImageButton
                        android:id="@+id/entry_gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@android:drawable/ic_menu_gallery"/>

                </LinearLayout>

                <CheckBox
                    android:id="@+id/entry_solved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/entry_solved_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </LinearLayout>
            </LinearLayout>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/entry_title_label"
                android:textColor="@color/brown" />

            <EditText
                android:id="@+id/entry_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_title_hint" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/entry_good_label"
                android:textColor="@color/brown" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:text="       1       "
                        android:textColor="@color/brown" />

                    <EditText
                        android:id="@+id/entry_good1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/entry_good_hint" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="       2       "
                        android:textColor="@color/brown" />
                    <EditText
                        android:id="@+id/entry_good2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/entry_good_hint" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="       3       "
                        android:textColor="@color/brown" />
                    <EditText
                        android:id="@+id/entry_good3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/entry_good_hint" />
                </TableRow>


            </TableLayout>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/entry_video_label"
                    android:textColor="@color/brown" />

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/entry_suspect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/entry_suspect_text"/>
            <Button
                android:id="@+id/entry_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/entry_report_text"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>